# dPlayer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SCholder.cpp  SCholder.h  ShaderWindow.qml  SpectrumWindow.qml  example.frag  fonts.qrc  main.cpp  sampler.cpp  sampler.h  shadermanager.cpp  shadermanager.h  youreyes.cpp  youreyes.h
font/font_ali/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
